--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <title>Landing Page</title>
   </head>
   <body>
     <header>
-      <img src="./assets/img/sureste.png" alt="logo" />
-      <h1>Lisette Malave</h1>
-      <div>
+      <div class="logo">
+        <img
+          class="img-logo"
+          src="./assets/img/sureste(sin-fondo).png"
+          alt="logo"
+        />
+        <h1>Lisette Malave</h1>
+      </div>
+
+      <div class="nav-bar">
         <ul>
           <li>Inicio</li>
           <li>Servicios</li>
-          <li>Porfolio</li>
+          <li>Portfolio</li>
           <li>Contacto</li>
         </ul>
       </div>
