cambiando el diseño de la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <div class="logo">
         <img
           class="img-logo"
-          src="./assets/img/sureste(sin-fondo).png"
+          src="./assets/img/logo Lm.png"
           alt="logo"
         />
-        <h1>Lisette Malave</h1>
+        <!-- <h1>Lisette Malave</h1> -->
       </div>
 
       <div class="nav-bar">
