--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    
     <title>Landing Page</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img
-          class="img-logo"
-          src="./assets/img/logo Lm.png"
-          alt="logo"
-        />
-        <!-- <h1>Lisette Malave</h1> -->
+        <img class="img-logo" src="./assets/img/logo Lm.png" alt="logo" />
       </div>
 
       <div class="nav-bar">
