Se agrego los links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
       <div class="nav-bar">
         <ul>
-          <li>Inicio</li>
-          <li>Servicios</li>
-          <li>Portfolio</li>
-          <li>Contacto</li>
+          <li><a href="#"></a>Inicio</li>
+          <li><a href="#"></a>Servicios</li>
+          <li><a href="#"></a>Portfolio</li>
+          <li><a href="#"></a>Contacto</li>
         </ul>
       </div>
     </header>
