--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
       <div class="nav-bar">
         <ul>
-          <li><a href="#"></a>Inicio</li>
-          <li><a href="#"></a>Servicios</li>
-          <li><a href="#"></a>Portfolio</li>
-          <li><a href="#"></a>Contacto</li>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacto</a></li>
         </ul>
       </div>
     </header>
