--- a/index.html
+++ b/index.html
@@ -4,23 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    
+
     <title>Landing Page</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img class="img-logo" src="./assets/img/logo Lm.png" alt="logo" />
+        <img class="img-logo" src="/assets/img/logo Lm(1).png" alt="logo" />
       </div>
 
-      <div class="nav-bar">
+      <nav class="nav-bar">
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Servicios</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
-      </div>
+      </nav>
     </header>
+
+    <hr />
+    <section>
+      <div class="hero">
+        <div class="hero-content">
+          <h1>Brindando soluciones,</h1>
+          <h2> Lisette Malave Web Developer</h2>
+          <p>
+            ¿Quieres una página web para tu negocio? Soy freelancer y me especializo en Front-end developer.
+          </p>
+
+          <ul class="hero-btn">
+            <li><a href="#">Contáctame</a></li>
+            <li><a href="#">Mis proyectos</a></li>
+          </ul>
+        </div>
+        <div class="hero-img">
+          <img src="/assets/img/earth-3537401_640.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <hr>
+    <section class="about">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia aliquam
+        cum consequuntur nisi numquam ducimus blanditiis iure inventore nam
+        animi atque ex aliquid facere non dolor, incidunt, sapiente alias
+        delectus exercitationem maiores natus illo. Velit perferendis iste
+        dolores repellendus perspiciatis minus corrupti iusto. Et quidem atque,
+        non veniam ipsa illum?
+      </p>
+      <hr>
+    </section>
   </body>
+ 
 </html>
