modificando los botones

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           </p>
 
           <ul class="hero-btn">
-            <li><a href="#">Contáctame</a></li>
-            <li><a href="#">Mis proyectos</a></li>
+            <li class="hero-btn-primary"><a href="#">Contáctame</a></li>
+            <li class="hero-btn-secondary"><a href="#">Mis proyectos</a></li>
           </ul>
         </div>
         <div class="hero-img">
