creación y diseño del about

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       <div class="hero">
         <div class="hero-content">
           <h1>Brindando soluciones,</h1>
-          <h2> Lisette Malave Web Developer</h2>
+          <h2>Lisette Malave Web Developer</h2>
           <p>
-            ¿Quieres una página web para tu negocio? Soy freelancer y me especializo en Front-end developer.
+            ¿Quieres una página web para tu negocio? Soy freelancer y me
+            especializo en Front-end developer.
           </p>
 
           <ul class="hero-btn">
@@ -43,18 +44,19 @@
         </div>
       </div>
     </section>
-    <hr>
+    <hr />
     <section class="about">
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia aliquam
-        cum consequuntur nisi numquam ducimus blanditiis iure inventore nam
-        animi atque ex aliquid facere non dolor, incidunt, sapiente alias
-        delectus exercitationem maiores natus illo. Velit perferendis iste
-        dolores repellendus perspiciatis minus corrupti iusto. Et quidem atque,
-        non veniam ipsa illum?
-      </p>
-      <hr>
+      <div class="about-text">
+        <p>
+          Me dedico a la creación de páginas Web responsivas. Centrándome en el
+          código limpio y la experiencia del usuario, entrego un trabajo de
+          calidad que cumple con los requisitos del cliente. Trabajemos juntos
+          para llevar su presencia web al siguiente nivel. ¡Satisfacción
+          garantizada!
+        </p>
+      </div>
+
+      <hr />
     </section>
   </body>
- 
 </html>
