--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="hero">
         <div class="hero-content">
           <h1>Brindando soluciones,</h1>
-          <h2>Lisette Malave Web Developer</h2>
+          
           <p>
             ¿Quieres una página web para tu negocio? Soy freelancer y me
             especializo en Front-end developer.
@@ -48,7 +48,7 @@
     <section class="about">
       <div class="about-text">
         <p>
-          Me dedico a la creación de páginas Web responsivas. Centrándome en el
+          Soy Lisette Malavé. Me dedico a la creación de páginas Web responsivas. Centrándome en el
           código limpio y la experiencia del usuario, entrego un trabajo de
           calidad que cumple con los requisitos del cliente. Trabajemos juntos
           para llevar su presencia web al siguiente nivel. ¡Satisfacción
