--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="logo">
         <img class="img-logo" src="/assets/img/logo Lm(1).png" alt="logo" />
       </div>
