--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo">
+     
         <img class="img-logo" src="/assets/img/logo Lm(1).png" alt="logo" />
-      </div>
+      
 
       <nav class="nav-bar">
         <ul>
@@ -40,7 +40,7 @@
           </ul>
         </div>
         <div class="hero-img">
-          <img src="/assets/img/earth-3537401_640.jpg" alt="" />
+          <img src="/assets/img/earth-3537401_640.jpg" alt="Planeta-tierra" />
         </div>
       </div>
     </section>
@@ -57,6 +57,9 @@
       </div>
 
       <hr />
+    </section>
+    <section class="cards">
+      <h3>Mis Habilidades</h3>
     </section>
   </body>
 </html>
