creacion de lacard-sección

--- a/index.html
+++ b/index.html
@@ -59,7 +59,32 @@
       <hr />
     </section>
     <section class="cards">
-      <h3>Mis Habilidades</h3>
+      <h3>Sobre mí</h3>
+
+      <div class="container-card">
+        <img src="" alt="">
+        <h4 class="titulo">Asesoria en el proceso</h4>
+        <p class="texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, labore.
+        </p>
+
+      </div>
+      <div class="container-card">
+        <img src="" alt="">
+        <h4 class="titulo">Estudiante en sistemas</h4>
+        <p class="texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, labore.
+        </p>
+
+      </div>
+      <div class="container-card">
+        <img src="" alt="">
+        <h4 class="titulo">otro beneficio</h4>
+        <p class="texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, labore.
+        </p>
+
+      </div>
     </section>
   </body>
 </html>
