creación de style para el responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="style-responsive.css".css>
 
     <title>Landing Page</title>
   </head>
@@ -116,7 +117,7 @@
     
     <div class="icons-contact">
       <img src="/assets/img/twitter_socialnetwork_20007.png" alt="twitter">
-      <img src="/assets/img/Instagram_icon-icons.com_66804.png" alt="instagram">
+      <img src="/assets/img/instagram_ig_insta_icon_190937.png" alt="instagram">
       <img src="/assets/img/Facebook_Square_icon-icons.com_49948.png" alt="facebook">
     </div>
   </div>
@@ -135,7 +136,7 @@
         <img src="/assets/img/logo Lm.png" alt="logo">
       </div>
       <div class="texto-footer">
-        <h5>Powered by Lisette Malavé</h5>
+        <h5> © Lisette Malavé</h5>
       </div>
     </div>
 
