culminación del responsible tablet, creación del responsive en disp. movil

--- a/index.html
+++ b/index.html
@@ -73,15 +73,14 @@
         </div>
         <h4 class="titulo-card">Asesoria en la creación de la página web</h4>
         <p class="card-text">
-          Trabajar de la mano del cliente desarrollar experiencias memorables e
-          intuitivas para los usuarios.
+          Trabajar de la mano del cliente para desarrollar nuevas experiencias para los usuarios.
         </p>
       </div>
       <div class="container-card">
         <div class="img"><img src="/assets/img/idea.png" alt="" /></div>
         <h4 class="titulo-card">Desarrollo de ideas creativas</h4>
         <p class="card-text">
-          Creación de soluciones visuales que transmitan su mensaje de manera
+          Soluciones visuales que transmitan su mensaje de manera
           clara y efectiva.
         </p>
       </div>
@@ -90,7 +89,7 @@
         <div class="img">
           <img src="/assets/img/clasificacion.png" alt="" />
         </div>
-        <h4 class="titulo-card">Mayor alcance de clientes</h4>
+        <h4 class="titulo-card">Obtener un mayor alcance de clientes</h4>
         <p class="card-text">
           Tu web es un recurso útil de información sobre tu negocio, así como
           sobre la industria en la que te encuentras.
