creacion de menu hamburguesa, ajustes en el about y hero

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <img class="img-logo" src="/assets/img/logo Lm(1).png" alt="logo" />
 
       <nav class="nav-bar">
-        <ul>
+        <label for="menu-toggle" class="menu-label">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 24 24" fill="none" stroke="rgba(0, 255, 247, 0.479)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+        </label>
+        <input type="checkbox" id="menu-toggle">
+        <ul class="nav-bar-list">
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Servicios</a></li>
           <li><a href="#">Portfolio</a></li>
