agregando los links, culminando detalles en el responsive

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         </label>
         <input type="checkbox" id="menu-toggle">
         <ul class="nav-bar-list">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#hero">Inicio</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#ventajas">Ventajas</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
       </nav>
     </header>
 
     <hr />
     <section>
-      <div class="hero">
+      <div id="hero">
         <div class="hero-content">
           <h1>Brindando soluciones,</h1>
 
@@ -36,17 +36,15 @@
           <p>Soy Freelancer y me especializo en Front-end developer.</p>
 
           <ul class="hero-btn">
-            <li class="hero-btn-primary"><a href="#">Contáctame</a></li>
-            <li class="hero-btn-secondary"><a href="#">Mis proyectos</a></li>
+            <li class="hero-btn-primary"><a href="#contact">Contáctame</a></li>
+            <li class="hero-btn-secondary"><a href="https://github.com/LiseMalave" target="_blank">Mis proyectos</a></li>
           </ul>
         </div>
-        <!-- <div class="hero-img">
-          <img src="/assets/img/earth-3537401_640.jpg" alt="Planeta-tierra" />
-        </div> -->
+        
       </div>
     </section>
     <hr />
-    <section class="about">
+    <section id="about">
       <div class="about-text">
         <p>
           Soy Lisette Malavé. Me dedico a la creación de páginas Web
@@ -70,7 +68,7 @@
     </div>
 
     <hr />
-    <section class="cards">
+    <section id="ventajas">
       <div class="container-card">
         <div class="img">
           <img src="/assets/img/apoyo-tecnico.png" alt="" />
@@ -111,7 +109,7 @@
       </div>
     </div>
     <hr />
-    <section class="contact">
+    <section id="contact">
       <div class="contact-info">
         <h4 class="contact-title">Capital Federal</h4>
 
